--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,60 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "~slick-carousel/slick/slick.css"; 
-@import "~slick-carousel/slick/slick-theme.css";
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
 @import 'react-loading-skeleton/dist/skeleton.css';
 @import url(./checkboxStyle.scss);
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-body {  
-  text-rendering: optimizeSpeed;
+body {
+    text-rendering: optimizeSpeed;
 }
 .active {
-  border-bottom: 2px solid rgb(252, 211, 77);
-  font-weight:800;
-  animation: underline 0.5s linear  forwards ;
+    border-bottom: 2px solid rgb(252, 211, 77);
+    font-weight: 800;
+    animation: underline 0.5s linear forwards;
 }
 @keyframes underline {
-  from {
-       opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .section-title::after {
-  content:' ';
-  position:absolute;  
-  height: 0;
-  width: 0;
-  border-top: 1rem solid transparent;
-  border-bottom: 1rem solid transparent;
-  border-left: 1.5rem solid rgb(252, 211, 77);
+    content: ' ';
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-top: 1rem solid transparent;
+    border-bottom: 1rem solid transparent;
+    border-left: 1.5rem solid rgb(252, 211, 77);
 }
 
 .slick-next:before,
-.slick-prev:before { 
- font-size: 2rem;
+.slick-prev:before {
+    font-size: 3rem;
+    color: rgb(65, 65, 65);
 }
 
-.slick-prev { 
-  top:40%;
-  left: 2.5rem;
-  z-index: 10; 
- }
-.slick-next { 
-  top:40%;
-  right: 2.5rem; 
+.slick-prev {
+    top: 40%;
+    left: 2.5rem;
+    z-index: 10;
+}
+.slick-next {
+    top: 40%;
+    right: 2.5rem;
 }
